--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
     models:
       user: ユーザー
       training: 筋トレメニュー
+      comment: コメント
     attributes:
       user:
         id: ID
@@ -29,6 +30,10 @@ ja:
         popularity: 人気度
         user_id: メニュー作成者のID
         picture: トレーニング画像
+      comment:
+        user_id: コメント投稿者のID
+        training_id: コメントされた筋トレメニューのID
+        content: コメント
   date:
     abbr_day_names:
     - 日
